Add new BC fixing rho and p   1. source files EnforceRhoP.cpp/h   2. test files BC_EnforceRhoP.tst/xml

--- a/solvers/CompressibleFlowSolver/CMakeLists.txt
+++ b/solvers/CompressibleFlowSolver/CMakeLists.txt
@@ -21,6 +21,7 @@ IF( NEKTAR_SOLVER_COMPRESSIBLE_FLOW )
        ./BoundaryConditions/PressureOutflowNonReflectiveBC.cpp
        ./BoundaryConditions/RiemannInvariantBC.cpp
        ./BoundaryConditions/RiemannBoundary.cpp
+       ./BoundaryConditions/EnforceRhoP.cpp
        ./BoundaryConditions/RinglebFlowBC.cpp
        ./BoundaryConditions/StagnationInflowBC.cpp
        ./BoundaryConditions/SymmetryBC.cpp
