--- a/docker/packaging/Dockerfile-debian-bullseye
+++ b/docker/packaging/Dockerfile-debian-bullseye
@@ -31,6 +31,9 @@ RUN DEBIAN_RELEASE=bullseye && \
             texlive-fonts-recommended texlive-pstricks \
         doxygen graphviz imagemagick dvipng
 
+RUN rm -f /usr/lib/x86_64-linux-gnu/openmpi/lib/*ucx* && \
+    rm /usr/lib/x86_64-linux-gnu/openmpi/lib/openmpi3/*ucx*
+ 
 RUN groupadd nektar && useradd -m -g nektar nektar
 
 USER nektar:nektar
