Added missing reference to deploy template.

--- a/.gitlab-ci/packaging.yml
+++ b/.gitlab-ci/packaging.yml
@@ -234,6 +234,7 @@ package-debian-bullseye-test:
     image_name: debian:bullseye
 
 package-debian-bullseye-deploy:
+  <<: *package-deb-deploy
   needs: ["package-debian-bullseye-test"]
   dependencies:
     - package-debian-bullseye-build
