--- a/.gitlab-ci/packaging.yml
+++ b/.gitlab-ci/packaging.yml
@@ -235,7 +235,7 @@ package-debian-bullseye-test:
 
 package-debian-bullseye-deploy:
   <<: *package-deb-deploy
-  needs: ["package-debian-bullseye-test"]
+  needs: ["package-debian-bullseye-build", "package-debian-bullseye-test"]
   dependencies:
     - package-debian-bullseye-build
 
