--- a/.gitlab-ci/packaging.yml
+++ b/.gitlab-ci/packaging.yml
@@ -101,7 +101,8 @@
     - OS_DIST=$(echo $CI_JOB_NAME | cut -d- -f 2)
     - OS_VERSION=$(echo $CI_JOB_NAME | cut -d- -f 3)
     - DEB_LOC=/web/deb/${OS_DIST}-${OS_VERSION}
-    - apt install dpkg-dev dpkg-sig gpg gzip apt-utils
+    - apt -yq update
+    - apt -yq install dpkg-dev gpg apt-utils
     - echo "$DEB_DEPLOY_KEY" | base64 --decode | gpg --import
     - mkdir -p $DEB_LOC/amd64
     - cp deb/* $DEB_LOC/amd64
@@ -213,6 +214,12 @@ package-debian-unstable-test:
   variables:
     image_name: debian:unstable
 
+package-debian-unstable-deploy:
+  <<: *package-deb-deploy
+  needs: ["package-debian-unstable-build", "package-debian-unstable-test"]
+  dependencies:
+    - package-debian-unstable-build
+
 ##
 ## Debian bullseye
 ##
@@ -259,6 +266,12 @@ package-debian-buster-test:
   variables:
     image_name: debian:buster
 
+package-debian-buster-deploy:
+  <<: *package-deb-deploy
+  needs: ["package-debian-buster-build", "package-debian-buster-test"]
+  dependencies:
+    - package-debian-buster-build
+
 ##
 ## Debian stretch
 ##
@@ -278,6 +291,12 @@ package-debian-stretch-test:
     - package-debian-stretch-build
   variables:
     image_name: debian:stretch
+
+package-debian-stretch-deploy:
+  <<: *package-deb-deploy
+  needs: ["package-debian-stretch-build", "package-debian-stretch-test"]
+  dependencies:
+    - package-debian-stretch-build
 
 ##
 ## Ubuntu focal
@@ -299,6 +318,12 @@ package-ubuntu-focal-test:
   variables:
     image_name: ubuntu:focal
 
+package-ubuntu-focal-deploy:
+  <<: *package-deb-deploy
+  needs: ["package-ubuntu-focal-build", "package-ubuntu-focal-test"]
+  dependencies:
+    - package-ubuntu-focal-build
+
 ##
 ## Ubuntu bionic
 ##
@@ -318,6 +343,12 @@ package-ubuntu-bionic-test:
     - package-ubuntu-bionic-build
   variables:
     image_name: ubuntu:bionic
+
+package-ubuntu-bionic-deploy:
+  <<: *package-deb-deploy
+  needs: ["package-ubuntu-bionic-build", "package-ubuntu-bionic-test"]
+  dependencies:
+    - package-ubuntu-bionic-build
 
 ##
 ## Ubuntu xenial
@@ -339,6 +370,11 @@ package-ubuntu-xenial-test:
   variables:
     image_name: ubuntu:xenial
 
+package-ubuntu-xenial-deploy:
+  <<: *package-deb-deploy
+  needs: ["package-ubuntu-xenial-build", "package-ubuntu-xenial-test"]
+  dependencies:
+    - package-ubuntu-xenial-build
 
 
 
