--- a/.gitlab-ci/packaging.yml
+++ b/.gitlab-ci/packaging.yml
@@ -101,7 +101,7 @@
     - OS_DIST=$(echo $CI_JOB_NAME | cut -d- -f 2)
     - OS_VERSION=$(echo $CI_JOB_NAME | cut -d- -f 3)
     - DEB_LOC=/web/deb/${OS_DIST}-${OS_VERSION}
-    - [ ! -d /web/deb ] && echo "Remote filesystem not accessible" && exit 1
+    - if [ ! -d /web/deb ]; then echo "Remote filesystem not accessible"; exit 1; fi
     - apt -yq update
     - apt -yq install dpkg-dev gpg apt-utils
     - echo "$DEB_DEPLOY_KEY" | base64 --decode | gpg --import
@@ -190,12 +190,12 @@
     - OS_VERSION=$(echo $CI_JOB_NAME | cut -d- -f 3)
     - RPM_LOC=/web/yum/${OS_DIST}/${OS_VERSION}
     - TMP_LOC=/tmp/repo
-    - [ ! -d /web/yum ] && echo "Remote filesystem not accessible" && exit 1
+    - if [ ! -d /web/yum ]; then echo "Remote filesystem not accessible"; exit 1; fi
     - dnf install -y createrepo rpm-sign
     - echo "$RPM_DEPLOY_KEY" | base64 --decode | gpg --import
     - for f in RPMS/*/*.rpm SRPMS/*.rpm; do rpm -D '_gpg_name nektar-users@imperial.ac.uk' --addsign $f; done
     - mkdir -p $TMP_LOC
-    - [ -d $RPM_LOC ] && rsync -a $RPM_LOC/ $TMP_LOC/
+    - if [ -d $RPM_LOC ]; then rsync -a $RPM_LOC/ $TMP_LOC/; fi
     - mkdir -p $TMP_LOC/RPMS/x86_64 $TMP_LOC/SRPMS
     - cp RPMS/x86_64/*.rpm $TMP_LOC/RPMS/x86_64
     - cp SRPMS/*.rpm $TMP_LOC/SRPMS
