--- a/.gitlab-ci/packaging.yml
+++ b/.gitlab-ci/packaging.yml
@@ -101,19 +101,23 @@
     - OS_DIST=$(echo $CI_JOB_NAME | cut -d- -f 2)
     - OS_VERSION=$(echo $CI_JOB_NAME | cut -d- -f 3)
     - DEB_LOC=/web/deb/${OS_DIST}-${OS_VERSION}
+    - CONTRIB=${DEB_LOC}/dists/${OS_VERSION}/contrib
     - if [ ! -d /web/deb ]; then echo "Remote filesystem not accessible"; exit 1; fi
     - apt -yq update
     - apt -yq install dpkg-dev gpg apt-utils
     - echo "$DEB_DEPLOY_KEY" | base64 --decode | gpg --import
-    - mkdir -p $DEB_LOC/amd64
-    - cp deb/* $DEB_LOC/amd64
+    - mkdir -p $DEB_LOC/{pool/contrib,${CONTRIB}/binary-amd64}
+    - cp deb/* $DEB_LOC/pool/contrib/
     - cd $DEB_LOC
-    - apt-ftparchive --arch amd64 packages amd64 > Packages
-    - gzip -k -f Packages
-    - apt-ftparchive release . > Release
+    - apt-ftparchive --arch amd64 packages pool/contrib > ${CONTRIB}/binary-amd64/Packages
+    - gzip -k -f ${CONTRIB}/binary-amd64/Packages
+    - apt-ftparchive --arch amd64 contents pool/contrib > ${CONTRIB}/binary-amd64/Contents-amd64
+    - gzip -k -f ${CONTRIB}/binary-amd64/Contents-amd64
+    - apt-ftparchive release ${CONTRIB}/binary-amd64 > ${CONTRIB}/binary-amd64/Release
+    - apt-ftparchive release -o APT::FTPArchive::Release::Codename="${OS_VERSION}" -c /web/deb/release.conf dists/${OS_VERSION} > dists/${OS_VERSION}/Release
     - rm -rf Release.gpg InRelease
-    - gpg --default-key nektar -abs -o Release.gpg Release
-    - gpg --default-key nektar --clearsign -o InRelease Release
+    - gpg --default-key nektar -abs -o dists/${OS_VERSION}/Release.gpg dists/${OS_VERSION}/Release
+    - gpg --default-key nektar -abs --clearsign -o dists/${OS_VERSION}/InRelease dists/${OS_VERSION}/Release
 
 .package-rpm-build: &package-rpm-build
   <<: *package-conditions
