Do dist-upgrade at end of pkg env creation.

--- a/docker/packaging/Dockerfile-debian-stretch
+++ b/docker/packaging/Dockerfile-debian-stretch
@@ -32,6 +32,10 @@ RUN DEBIAN_RELEASE=stretch && \
 
 RUN groupadd nektar && useradd -m -g nektar nektar
 
+# Force update to always run when building image
+ARG INVALIDATE_CACHE
+RUN apt-get update && DEBIAN_FRONTEND=noninteractive apt-get dist-upgrade -y
+
 USER nektar:nektar
 WORKDIR /home/nektar
 COPY docker/packaging/quiltrc .quiltrc
