--- a/docker/packaging/Dockerfile-debian-buster
+++ b/docker/packaging/Dockerfile-debian-buster
@@ -33,6 +33,10 @@ RUN DEBIAN_RELEASE=buster && \
 
 RUN groupadd nektar && useradd -m -g nektar nektar
 
+# Force update to always run when building image
+ARG INVALIDATE_CACHE
+RUN apt-get update && DEBIAN_FRONTEND=noninteractive apt-get dist-upgrade -y
+
 USER nektar:nektar
 WORKDIR /home/nektar
 COPY docker/packaging/quiltrc .quiltrc
