--- a/docker/packaging/Dockerfile-debian-unstable
+++ b/docker/packaging/Dockerfile-debian-unstable
@@ -36,6 +36,10 @@ RUN rm -f /usr/lib/x86_64-linux-gnu/openmpi/lib/*ucx* && \
 
 RUN groupadd nektar && useradd -m -g nektar nektar
 
+# Force update to always run when building image
+ARG INVALIDATE_CACHE
+RUN apt-get update && DEBIAN_FRONTEND=noninteractive apt-get dist-upgrade -y
+
 USER nektar:nektar
 WORKDIR /home/nektar
 COPY docker/packaging/quiltrc .quiltrc
