--- a/.gitlab-ci/packaging.yml
+++ b/.gitlab-ci/packaging.yml
@@ -219,6 +219,7 @@ package-source-archive-env:
 package-source-archive-build:
   <<: *package-conditions
   stage: package-build
+  image: $CI_REGISTRY_IMAGE/pkg/source-archive
   needs: ["package-source-archive-env"]
   tags:
     - pkg
@@ -240,6 +241,7 @@ package-source-archive-build:
 package-source-archive-deploy:
   <<: *package-conditions
   stage: package-deploy
+  image: $CI_REGISTRY_IMAGE/pkg/source-archive
   needs: ["package-source-archive-build"]
   tags:
     - pkg
@@ -258,6 +260,7 @@ package-source-doc-env:
 package-source-doc-build:
   <<: *package-conditions
   stage: package-build
+  image: $CI_REGISTRY_IMAGE/pkg/source-doc
   needs: ["package-source-doc-env"]
   tags:
     - pkg
@@ -285,6 +288,7 @@ package-source-doc-build:
 package-source-doc-deploy:
   <<: *package-conditions
   stage: package-deploy
+  image: $CI_REGISTRY_IMAGE/pkg/source-doc
   needs: ["package-source-doc-build"]
   tags:
     - pkg
